manifests/backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fake-chatter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-chatter-backend
  namespace: fake-chatter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-chatter-backend
  template:
    metadata:
      labels:
        app: fake-chatter-backend
    spec:
      containers:
      - name: backend
        image: mathisve/fake-chatter-backend:latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "265Mi"
        ports:
        - containerPort: 5050

---
apiVersion: v1
kind: Service
metadata:
  name: fake-chatter-backend
  namespace: fake-chatter
spec:
  type: ClusterIP
  selector:
    app: fake-chatter-backend
  ports:
  - name: http
    port: 80
    targetPort: 5050
    protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-chatter-backend
  namespace: fake-chatter
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
spec:
  ingressClassName: nginx
  rules:
  - host: outpost.homek8s.com
    http:
      paths:
      - path: /stream
        pathType: Prefix
        backend:
          service:
            name: fake-chatter-backend
            port:
              number: 80
