manifests/frontend.yaml


apiVersion: v1
kind: Namespace
metadata:
  name: fake-chatter

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fake-chatter-frontend
  namespace: fake-chatter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fake-chatter-frontend
  template:
    metadata:
      labels:
        app: fake-chatter-frontend
    spec:
      containers:
      - name: frontend
        image: mathisve/fake-chatter-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: fake-chatter-frontend
  namespace: fake-chatter
spec:
  type: ClusterIP
  selector:
    app: fake-chatter-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake-chatter-frontend
  namespace: fake-chatter
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: outpost.homek8s.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fake-chatter-frontend
            port:
              number: 80
